<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<!-- Dashboard -->
    <string name="string_timeline">Línea de tiempo</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="write_post">Write a story</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    
    <!-- Register Activity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    
	
    <!-- Timeline -->
    <string name="example_body_story">Example body story.</string>
	<string name="example_username">Example username.</string>
    <string name="example_date">06/15/2013</string>
    <string name="remove">Remove</string>
	
    <!-- Alerts -->
    <string name="miss_parameters">You should put all the parameters.</string>
    <string name="you_need_username_to_register">You need an username to register. Thanks.</string>
    <string name="you_need_username_to_register_and_password">You need an username and password to register.</string>
    
    <string name="impossible_connect_to_server">I am sorry, is impossible connect to server.</string>
    <string name="error_in_connection">Error in the connection.</string>
    
    <!-- Story Activity -->
    <string name="here_body_post">Here is the post body.</string>
    <string name="post_your_comment_here">Post your comment here.</string>
    <string name="send_comment">Send comment.</string>
    <string name="see_all_comments">See all comments.</string>
    <string name="remove_this_story">Remove this story.</string>
    <string name="posting_post">Posting post....</string>
    
    
    <!-- List comments -->
    <string name="remove_comment">Remove comment.</string>
    
	<string name="app_name">ACKNET Project</string>
    <string name="spinner_title">Select language</string>
    
    
    <string name="choose_your_language">Choose your language</string>
    <string name="category">Category</string>
    
     
     
    <string name="write_here_your_story">Write here your story....</string>
    <string name="attach_picture">Attach picture</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
     
    
    
    <string name="app_name">Acknet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
	<string name="signup">Sign Up</string>
	<string name="newString">New to Acknet?</string>
    <string name="haveAccount">Already have a Acknet account?</string>
    
    <string name="login_2">Sign Up</string>
    <string name="string_timeline">Timeline</string>
    <string name="post">Enviar post</string>
    <string name="load">Load</string>
    <string name="desc">Description Image</string>
    <string name="go_camera">go_cammera</string>
    <string name="pick_photo">pick a picture</string>
    <string name="hint_">Edit text hint</string>
    <string name="playing">are playing right now</string>
    <string name="earned">earned</string>
    <string name="text_true">true</string>
    
    
    <string name="events">Events</string> 
    
	
	<string name="url_acknet">www.acknet.com</string>
	<string name="logIn">Log In</string>
	
	
	<string name="spinner_title">spinner_title</string>
	
	
	
	
	<string name="writeStory">Write your story</string>
	
	
	<!-- Activity titles -->    
    <string name="activity_location_found">Location Found</string>
    
    <!-- Action Bar action items -->
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    
    <!-- Search  -->
    <string name="search_hint">Search color..</string>
	
	
	
</resources>
