<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_layout"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textlines"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/here_body_post" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/youtubeplayerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </com.google.android.youtube.player.YouTubePlayerView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:ems="10"
                android:hint="@string/post_your_comment_here"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btn_sendComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_comment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/see_comments"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="53dp"
                android:clickable="true"
                android:text="@string/see_all_comments"
                android:textColor="#0030FF"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/remove_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/remove_this_story"
                android:textColor="#0030FF" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>