<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_layout"
    android:padding="2dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/actionbar_layout" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:text="@string/writeStory"
                android:textColor="#ff29549f"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:background="@drawable/textlines2"
                android:ems="10"
                android:hint="@string/write_here_your_story"
                android:inputType="textMultiLine"
                android:minHeight="150dp"
                android:padding="5dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_library"
                    style="@style/DashboardButton"
                    android:layout_width="wrap_content"
                    android:drawableTop="@drawable/ic_action_new_picture"
                    android:padding="10dp"
                    android:text="@string/attach_picture" />

                <Button
                    android:id="@+id/btn_camera"
                    style="@style/DashboardButton"
                    android:drawableTop="@drawable/ic_action_camera"
                    android:padding="10dp"
                    android:text="@string/camera" />

                <Button
                    android:id="@+id/btn_video"
                    style="@style/DashboardButton"
                    android:drawableTop="@drawable/ic_action_video"
                    android:padding="10dp"
                    android:text="@string/video" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_help" />

                <TextView
                    android:id="@+id/info_attach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10sp"
                    android:paddingTop="5sp"
                    android:text="You do not have attachment file." />
            </LinearLayout>

            <Button
                android:id="@+id/send_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Post" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>